add a lot of images for E0, E1, E2

--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -363,12 +363,13 @@
 	\begin{equation}
 		\lim_{y \to -\infty} E(T^*,\mu^*;y) = -\infty, \quad \lim\limits_{y \to +\infty} E(T^*,\mu^*;y) = -\infty.
 	\end{equation}
-	The typical behavior of $E(T^*,\mu^*;y)$ as a function of $y$ in the single-phase domain is illustrated in Fig.~\ref{fig:E0_vs_y}
+	The typical behavior of $E(T^*,\mu^*;y)$ as a function of $y$ in the single-phase domain is illustrated in Fig.~\ref{fig:E0_vs_y}. More figures for $E$ can be found in Subsection~\ref{sec:figE0}.
+	
 	\begin{figure}[htbp]
-		\includegraphics[width=0.5\textwidth,angle=0]{E0_vs_y2}
+		\includegraphics[width=0.5\textwidth,angle=0]{images/E0_vs_y2}
 		\centering
 		\captionsetup{width=0.6\textwidth}
-		\caption{Quantity $E(y,p,\mu)$ as a function of $y$ at $p=2.0$ ($T^*=0.5$) and $\beta\mu=-2.0$ ($\mu^*=-1.0$) for two different values of $v^*$: Solid line (black): $v^* = 10$, Dash line (blue): $v^* = 5$.}
+		\caption{Quantity $E(T^*,\mu^*;y)$ as a function of $y$ at $T^*=0.5$ and $\mu^*=-1.0$ for two different values of $v^*$: Solid line (black): $v^* = 10$, Dash line (blue): $v^* = 5$.}
 		\label{fig:E0_vs_y}
 	\end{figure}
 	
@@ -751,8 +752,111 @@
 	The equation for entropy~\eqref{S_vs_T_mu} expresses entropy as a function of temperature and chemical potential. If we want to have entropy as a function of temperature and density, we combine equations~\eqref{S_vs_T_mu} and~\eqref{rho_vs_T_mu} into a parametric equation for entropy, with $\mu$ being the parameter. This way we can plot the dependence of entropy on density at a given temperature. Such dependencies are present in Fig.~\ref{fig:S_vs_rho} and~Fig.~\ref{fig:SS_vs_rho}.
 	
 	
+	\pagebreak
 	
+	\section{Figures}
+	\subsection{Figures for $E(T^*,\mu^*;y)$}
+	\label{sec:figE0}
 	
+	\begin{figure}[htbp]
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E0y_vs_y_a1}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E0y_vs_y_a2}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E0y_vs_y_a3}
+		\\
+		%\captionsetup{width=0.5\textwidth}
+		\vfill
+		\parbox{0.95\textwidth}{\caption{\label{fig:E0y_vs_y_a} Quantity $E(T^*,\mu^*;y)$ as a function of $y$ at different values of $T^*$ and $\mu^*$. Left: $T^*=0.5$; Center: $T^*=0.25$; Right: $T^*=0.2$. Lines: Blue: $\mu^*=-1.0$; Green: $\mu^*=0.0$; Red: $\mu^*=0.5$.}}
+		%\hfill
+		%\captionsetup{width=0.5\textwidth}
+		
+	\end{figure}
+	
+	\begin{figure}[htbp]
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E0y_vs_y_b1}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E0y_vs_y_b2}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E0y_vs_y_b3}
+		%\\
+		%\captionsetup{width=0.5\textwidth}
+		\vfill
+		\parbox{0.95\textwidth}{\caption{\label{fig:E0y_vs_y_b} Quantity $E(T^*,\mu^*;y)$ as a function of $y$ at different values of $T^*$ and $\mu^*$. Left: $\mu^*=-1.0$; Center: $\mu^*=0.0$; Right: $\mu^*=0.5$. Lines: Navy: $T^*=0.2$; Aquamarine: $T^*=0.25$; Maroon: $T^*=0.5$.}}
+		%\hfill
+		%\captionsetup{width=0.5\textwidth}
+		
+	\end{figure}
+	
+	\pagebreak
+	
+	\subsection{Figures for $E_1(T^*,\mu^*;y)$}
+	\label{sec:figE1}
+	
+	\begin{figure}[htbp]
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E1y_vs_y_a1}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E1y_vs_y_a2}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E1y_vs_y_a3}
+		\\
+		%\captionsetup{width=0.5\textwidth}
+		\vfill
+		\parbox{0.95\textwidth}{\caption{\label{fig:E1y_vs_y_a} Quantity $E_1(T^*,\mu^*;y)$ as a function of $y$ at different values of $T^*$ and $\mu^*$. Left: $T^*=0.5$; Center: $T^*=0.25$; Right: $T^*=0.2$. Lines: Blue: $\mu^*=-1.0$; Green: $\mu^*=0.0$; Red: $\mu^*=0.5$.}}
+		%\hfill
+		%\captionsetup{width=0.5\textwidth}
+		
+	\end{figure}
+	
+	\begin{figure}[htbp]
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E1y_vs_y_b1}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E1y_vs_y_b2}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E1y_vs_y_b3}
+		%\\
+		%\captionsetup{width=0.5\textwidth}
+		\vfill
+		\parbox{0.95\textwidth}{\caption{\label{fig:E1y_vs_y_b} Quantity $E_1(T^*,\mu^*;y)$ as a function of $y$ at different values of $T^*$ and $\mu^*$. Left: $\mu^*=-1.0$; Center: $\mu^*=0.0$; Right: $\mu^*=0.5$. Lines: Navy: $T^*=0.2$; Aquamarine: $T^*=0.25$; Maroon: $T^*=0.5$.}}
+		%\hfill
+		%\captionsetup{width=0.5\textwidth}
+		
+	\end{figure}
+	
+	\pagebreak
+	
+	\subsection{Figures for $E_2(T^*,\mu^*;y)$}
+	\label{sec:figE2}
+	
+	\begin{figure}[htbp]
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E2y_vs_y_a1}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E2y_vs_y_a2}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E2y_vs_y_a3}
+		\\
+		%\captionsetup{width=0.5\textwidth}
+		\vfill
+		\parbox{0.95\textwidth}{\caption{\label{fig:E2y_vs_y_a} Quantity $E_2(T^*,\mu^*;y)$ as a function of $y$ at different values of $T^*$ and $\mu^*$. Left: $T^*=0.5$; Center: $T^*=0.25$; Right: $T^*=0.2$. Lines: Blue: $\mu^*=-1.0$; Green: $\mu^*=0.0$; Red: $\mu^*=0.5$.}}
+		%\hfill
+		%\captionsetup{width=0.5\textwidth}
+		
+	\end{figure}
+	
+	\begin{figure}[htbp]
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E2y_vs_y_b1}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E2y_vs_y_b2}
+		\hfill
+		\includegraphics[width=0.3\textwidth,angle=0]{images/E2y_vs_y_b3}
+		%\\
+		%\captionsetup{width=0.5\textwidth}
+		\vfill
+		\parbox{0.95\textwidth}{\caption{\label{fig:E2y_vs_y_b} Quantity $E_2(T^*,\mu^*;y)$ as a function of $y$ at different values of $T^*$ and $\mu^*$. Left: $\mu^*=-1.0$; Center: $\mu^*=0.0$; Right: $\mu^*=0.5$. Lines: Navy: $T^*=0.2$; Aquamarine: $T^*=0.25$; Maroon: $T^*=0.5$.}}
+		%\hfill
+		%\captionsetup{width=0.5\textwidth}
+		
+	\end{figure}
 	
 	\appendix
 	
