--- a/notation.tex
+++ b/notation.tex
@@ -106,6 +106,8 @@ $\mathbb{N}_0$ - set of non-negative integer numbers;
 
 $\mathbb{R}$ - set of real numbers;
 
+$\mathbb{R}^{+}$ - set of positive real numbers;
+
 $\varrho \in \mathbb{N}_0^{N_v}$; $\varrho = (\varrho_1, \varrho_2, \ldots, \varrho_{N_{v}})$ - vector with non-negative integer components;
 
 $\nu(\gamma)=(N_1, N_2, \ldots, N_{N_v})$; $\nu(\gamma) = (\abs{\gamma_1}, \abs{\gamma_2}, \ldots, \abs{\gamma_{N_v}})$ - vector representing number of particles in each cell;
