--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -448,7 +448,7 @@
 		& = & \frac{\partial}{\partial y} E_1(T^*,\mu^*;y).
 		\nonumber
 	\end{eqnarray}
-	An explicit expression for $E_2(T^*,\mu^*;y)$ reads (cf.~\cite[(20)]{KD22})
+	The explicit expression for $E_2(T^*,\mu^*;y)$ reads (cf.~\cite[(20)]{KD22})
 	\begin{equation}
 		\label{def:reducedE2}
 		E_2(T^*,\mu^*;y) = -T^* + \frac{K_2(T^*,\mu^*;y) K_0(T^*,\mu^*;y) - [K_1(T^*,\mu^*;y)]^2}{[K_0(T^*,\mu^*;y)]^2},
@@ -482,7 +482,7 @@
 
 	
 	\pagebreak
-	\section{Implicit function theorem}
+	\section{Implicit function theorem for the condition of extremum}
 	The equation~\eqref{eq:bar_y} implicitly defines $\bar{y}$ as a function of temperature and chemical potential. We can benefit from the implicit function theorem to get some results for $\bar{y}$ and its derivatives with respect to chemical potential and temperature.
 	
 	First, let us recall that if a line is given by 
@@ -558,7 +558,7 @@
 	For the reduced density it follows
 	\begin{equation}
 		\label{eq:dens}
-		\rho^* = v\left(\frac{\partial P}{\partial \mu}\right)_T = \left(\frac{\partial P^*}{\partial \mu^*}\right)_T.
+		\rho^* = v\left(\frac{\partial P}{\partial \mu}\right)_T = \left(\frac{\partial P^*}{\partial \mu^*}\right)_{T^*}.
 	\end{equation}
 	As a result of the differentiation of pressure with respect to chemical potential (see Appendix~\ref{sec:app:dens} for details), one gets
 	\begin{eqnarray}
@@ -604,15 +604,17 @@
 			E_3 = 0,
 		\end{split}
 	\end{equation}
-	where
+	where we introduced the quantity
 	\begin{equation}
 		\begin{split}
 			E_3(T^*,\mu^*;\bar{y}) &:= \frac{\partial^3}{\partial y^3} E(T^*,\mu^*; y)\big|_{y=\bar{y}} 
 			\\
-			& = \frac{\partial}{\partial \bar{y}} E_2(T^*,\mu^*; \bar{y})
-			\\
-			& = \frac{K_3(T^*;\mu^*;\bar{y})}{K_0(T^*;\mu^*;\bar{y})} - \frac{3 K_2(T^*;\mu^*;\bar{y}) K_1(T^*;\mu^*;\bar{y})}{K_0(T^*;\mu^*;\bar{y})^2} + \frac{2K_1(T^*;\mu^*;\bar{y})^3}{K_0(T^*;\mu^*;\bar{y})^3}
+			& = \frac{\partial}{\partial \bar{y}} E_2(T^*,\mu^*; \bar{y}).
 		\end{split}
+	\end{equation}
+	The explicit expression for $E_3$ reads
+	\begin{equation}
+		E_3(T^*,\mu^*;\bar{y}) = \frac{K_3(T^*;\mu^*;\bar{y})}{K_0(T^*;\mu^*;\bar{y})} - \frac{3 K_2(T^*;\mu^*;\bar{y}) K_1(T^*;\mu^*;\bar{y})}{K_0(T^*;\mu^*;\bar{y})^2} + \frac{2K_1(T^*;\mu^*;\bar{y})^3}{K_0(T^*;\mu^*;\bar{y})^3}.
 	\end{equation}
 	Together with Eq.~\eqref{eq:bar_y} we have three equations with three unknown values for $T^*$, $\mu^*$, and $\bar{y}$:
 	\begin{equation}
@@ -683,7 +685,7 @@
 		\label{eq:entropy}
 		S^*(T^*,\mu^*) = \frac{1}{\rho^*(T^*,\mu^*)} 
 		\left[ 
-		E(T^*,\mu^*;\bar{y}) + T^* \left(\frac{\partial E(T^*,\mu^*;\bar{y})}{\partial T^*}\right)_{\mu^*} 
+		E(T^*,\mu^*;\bar{y}_{\rm max}) + T^* \left(\frac{\partial E(T^*,\mu^*;\bar{y}_{\rm max})}{\partial T^*}\right)_{\mu^*} 
 		\right].
 	\end{equation}
 	The result of calculation is
@@ -691,7 +693,7 @@
 		\label{S_vs_T_mu}
 		S^*(T^*,\mu^*) = \left(\frac{3}{2} - \frac{\mu^*}{T^*}\right) - \frac{1}{T^*}\frac{K_1}{K_0} + \frac{K_0 \ln K_0}{K_1} + \frac{a}{2T^*} \frac{K_2}{K_1},
 	\end{equation}
-	where for the special functions we imply $K_i = K_i(T^*,\mu^*;\bar{y})$.
+	where for the special functions we imply $K_i = K_i(T^*,\mu^*;\bar{y}_{\rm max})$.
 	The first contribution to the entropy corresponds to the entropy of non-interacting molecules in a lattice, or an ideal lattice gas contribution, see~\cite[(47.4)]{Hill56}, if we account for the ideal-gas chemical potential $\mu_{\rm id} = k_{\rm B}T \ln(N\Lambda^3/V)$. 
 	
 	
@@ -706,7 +708,7 @@
 	\end{equation}
 	The expressions for the entropy per cell is
 	\begin{eqnarray}
-		S^{**}(T^*,\mu^*) & = & -T^* \bar{y}^2 + \ln K_0 + \frac{1}{K_0}\left[\left(\frac{3}{2} - \frac{\mu^*}{T^*}\right) K_1 + \frac{a}{2T^*} K_2 \right]
+		S^{**}(T^*,\mu^*) & = & \left(\frac{3}{2} - \frac{\mu^*}{T^*}\right)\frac{K_1}{K_0} - \frac{1}{T^*}\frac{K_1^2}{K_0^2} + \ln K_0 + \frac{a}{2T^*} \frac{K_2}{K_0}
 	\end{eqnarray}
 	Details or calculation are present in Appendix~\ref{sec:app:entropy}.
 	
@@ -934,7 +936,7 @@
 	\end{align}
 	In the course of calculation, we have used the change of variables $x = 2\pi t$ and the definition~\eqref{def:Kronecker} for the Kronecker $\delta$-symbol.
 	
-	\subsection{\label{sec:app1} Explicit derivation of $E(T^*,\mu^*;y)$ and $K(T^*,\mu^*;y)$}
+	\subsection{\label{sec:app1} Explicit derivation of $E(T^*,\mu^*;y)$ and $K_0(T^*,\mu^*;y)$}
 	In this appendix, the explicit transformations from Eq.~\eqref{eq:XiPi} through~\eqref{eq:gaussInt} to~Eqs.~\eqref{eq:XiInty}, \eqref{def:E}, and~\eqref{def:K}, is presented. Substituting the Gaussian integral~\eqref{eq:gaussInt} into~\eqref{eq:XiPi}, one proceeds as follows
 	\begin{eqnarray}
 		\Xi 
@@ -981,7 +983,7 @@
 		\exp 
 		\left\{ N_v 
 		\left[ -\frac{T^* y^2}{2} + 
-		\ln K(T^*,\mu^*;y) 
+		\ln K_0(T^*,\mu^*;y) 
 		\right] 
 		\right\} {\rm d}y.
 	\end{equation}
@@ -994,12 +996,12 @@
 		\label{B1}
 		\rho^*(T^*,\mu^*) = \frac{\partial P^*}{\partial \mu^*} = T^* \frac{\partial E(T^*,\mu^*;\bar{y}_{\rm max})}{\partial \mu^*}.
 	\end{equation}
-	Then
+	Then from~\eqref{def:E}, it follows
 %	\begin{equation}
 %		\frac{\partial E}{\partial \mu^*} = \frac{1}{K_0} \frac{\partial K_0}{\partial \mu^*},
 %	\end{equation}
 	\begin{equation}
-		\frac{\partial E}{\partial \mu^*} = -T^* \bar{y}_{\rm max} \partial_{\mu^*} \bar{y}_{\rm max} + \frac{1}{K_0} \partial_{\mu^*} K_0,
+		\frac{\partial E}{\partial \mu^*} = -T^* \bar{y}_{\rm max} \cdot \partial_{\mu^*} \bar{y}_{\rm max} + \frac{1}{K_0} \partial_{\mu^*} K_0,
 	\end{equation}
 	and by~\eqref{def:K}
 	%\begin{equation}
@@ -1027,53 +1029,107 @@
 	\section{\label{sec:app:entropy} Calculation of Entropy}
 	This Appendix contains explicit calculation of entropy from Eq.~\eqref{eq:entropy} by taking derivatives of pressure with respect to temperature
 	\begin{equation}
-		S^{*} = \frac{1}{\rho^*} \left[E + T^* \left(\frac{\partial E}{\partial T^*}\right)_{\mu}\right];
+		S^{*} = \frac{1}{\rho^*} \left[E + T^* \left(\frac{\partial E}{\partial T^*}\right)_{\mu^*}\right];
 	\end{equation}
 	\begin{equation}
-		E = -\frac{1}{2}T^* \bar{y}^2 + \ln K_0.
+		E = -\frac{1}{2}T^* \bar{y}_{\rm max}^2 + \ln K_0.
 	\end{equation}
 	\begin{equation}
-		\frac{\partial E}{\partial T^*} = -\frac{1}{2}\bar{y}^2 + \frac{1}{K_0}\frac{\partial}{\partial T^*} K_0.
+		\frac{\partial E}{\partial T^*} = -\frac{1}{2}\bar{y}_{\rm max}^2 - T^* \bar{y}_{\rm max} \frac{\partial \bar{y}_{\rm max}}{\partial T^*} + \frac{1}{K_0}\frac{\partial}{\partial T^*} K_0.
 	\end{equation}
 	\begin{eqnarray}
-		\frac{\partial K_0}{\partial T^*} & = & \sum_{n=0}^{\infty} \frac{n (v^*)^{n-1}}{n!} \exp(F_n) \frac{\partial v^*}{\partial T^*} 
+		\frac{\partial K_0}{\partial T^*} & = & \sum_{n=0}^{\infty} \frac{n v^*(v^* T^{*3/2})^{n-1}}{n!} \frac{3T^{*1/2}}{2}\exp(F_n) 
 		\nonumber\\
-		& + & \sum_{n=0}^{\infty} \frac{(v^*)^n}{n!} \exp(F_n) \frac{\partial}{\partial T^*} F_n,
+		& + & \sum_{n=0}^{\infty} \frac{(v^* T^{*3/2})^n}{n!} \exp(F_n) \frac{\partial}{\partial T^*} F_n,
 	\end{eqnarray}
 	where we temporary introduced
 	\begin{eqnarray*}
-		F_n & = & \left(y + \frac{\mu^*}{T^*} \right)n -\frac{a}{2T^*}n^2
-		\\
-		& = & \left(y + \beta\mu \right)n -\frac{ap}{2}n^2.
+		F_n & = & \left(\bar{y}_{\rm max} + \frac{\mu^*}{T^*} \right)n -\frac{a}{2T^*}n^2.
 	\end{eqnarray*}
-	The derivatives of $v^*$ is
+	The derivative of $F_n$ with respect to $T^*$ is
 	\begin{equation}
-		\frac{\partial v^*}{\partial T^*} = \frac{3}{2} \frac{v^*}{T^*},
+		\frac{\partial F_n}{\partial T^*} = -\frac{1}{T^*} \left(\frac{\mu^*}{T^*}n - \frac{a}{2T^*}n^2\right) + n \frac{\partial \bar{y}_{\rm max}}{\partial T^*}.
 	\end{equation}
-	and that of $F_n$ is
+	Substituting the last result into the derivative for $K_0$, we get
 	\begin{equation}
-		\frac{\partial F_n}{\partial T^*} = -\frac{1}{T^*} \left(\frac{\mu^*}{T^*}n - \frac{a}{2T^*}n^2\right).
-	\end{equation}
-	Substituting the last two results into the derivative for $K$, we get
-	\begin{equation}
-		\frac{\partial K}{\partial T^*} = \frac{1}{T^*} \left(\frac{3}{2} - \frac{\mu^*}{T^*} \right)K_1 + \frac{1}{T^*}\frac{a}{2 T^*} K_2.
+		\frac{\partial K}{\partial T^*} = \frac{1}{T^*} \left(\frac{3}{2} - \frac{\mu^*}{T^*} \right)K_1 + \frac{1}{T^*}\frac{a}{2 T^*} K_2 + K_1 \frac{\partial \bar{y}_{\rm max}}{\partial T^*}.
 	\end{equation}
 	For the derivative of $E$ with respect to $T^*$ we have
-	\begin{equation}
-		\frac{\partial E}{\partial T^*} = -\frac{1}{2}\bar{y}^2 + \frac{1}{T^* K_0} \left[\left(\frac{3}{2} - \frac{\mu^*}{T^*} \right)K_1 + \frac{a}{2 T^*} K_2\right].
-	\end{equation}
-	The final result for the entropy per cell is
 	\begin{eqnarray}
-		S^{*} & = & \frac{1}{\rho^*} \left\{ -T^* \bar{y}^2 + \ln K_0 + \frac{1}{K_0} \left[\left(\frac{3}{2} - \frac{\mu^*}{T^*} \right)K_1 + \frac{a}{2 T^*} K_2\right] \right\}
+		\frac{\partial E}{\partial T^*} & = & -\frac{1}{2}\bar{y}_{\rm max}^2 + \frac{1}{T^* K_0} \left[\left(\frac{3}{2} - \frac{\mu^*}{T^*} \right)K_1 + \frac{a}{2 T^*} K_2\right] + \left(-T^*\bar{y} + \frac{K_1}{K_0}\right) \frac{\partial \bar{y}_{\rm max}}{\partial T^*}
+		\nonumber\\
+		& = & -\frac{1}{2}\bar{y}_{\rm max}^2 + \frac{1}{T^* K_0} \left[\left(\frac{3}{2} - \frac{\mu^*}{T^*} \right)K_1 + \frac{a}{2 T^*} K_2\right],
+	\end{eqnarray}
+	where we accounted for~\eqref{eq:bar_y}.
+	
+	The final result for the entropy per particle is
+	\begin{eqnarray}
+		S^{*} & = & \frac{1}{\rho^*} \left\{ -T^* \bar{y}_{\rm max}^2 + \ln K_0 + \frac{1}{K_0} \left[\left(\frac{3}{2} - \frac{\mu^*}{T^*} \right)K_1 + \frac{a}{2 T^*} K_2\right] \right\}
 		\\
-		& = & \frac{1}{\rho^*} \left\{ -\frac{1}{T^*} \frac{K_1^2}{K_0^2} + \ln K + \frac{1}{K_0} \left[\left(\frac{3}{2} - \frac{\mu^*}{T^*} \right)K_1 + \frac{a}{2 T^*} K_2\right] \right\}.
+		& = & \frac{1}{\rho^*} \left\{ -\frac{1}{T^*} \frac{K_1^2}{K_0^2} + \ln K_0 + \frac{1}{K_0} \left[\left(\frac{3}{2} - \frac{\mu^*}{T^*} \right)K_1 + \frac{a}{2 T^*} K_2\right] \right\}.
 	\end{eqnarray}
 	Taking into account~\eqref{eq:densK}, we finally get
 	\begin{equation}
 		S^* = \left(\frac{3}{2} - \frac{\mu^*}{T^*}\right) - \frac{1}{T^*}\frac{K_1}{K_0} + \frac{K_0 \ln K_0}{K_1} + \frac{a}{2T^*} \frac{K_2}{K_1}.
 	\end{equation}
 	
-	Note that we ignored here the dependence of $\bar{y}$ on temperature, since $\bar{y}$ maximizes $E$ and thus the contribution of partial derivative of $E$ with respect to $\bar{y}$ will be zero. However, such dependence must be accounted when calculating higher order derivatives, e.g. when calculating the heat capacity $C_V$.
+	Note that we may have ignored here the dependence of $\bar{y}_{\rm max}$ on temperature, since $\bar{y}_{\rm max}$ maximizes $E$ and thus the contribution of partial derivative of $E$ with respect to $\bar{y}_{\rm max}$ will be zero. However, such dependence must be accounted when calculating higher order derivatives, e.g. when calculating the heat capacity $C_V$.
+	
+	\pagebreak
+	\section{Special functions $K_n$}
+	\textbf{Definitions.}
+	
+	Generic definition is as follows
+	\begin{equation}
+		K_i(T^*,\mu^*;y) = \sum_{n=0}^{\infty} \frac{n^i (v^* T^{*3/2})^n}{n!} \exp[\left(y+\frac{\mu^*}{T^*}\right)n - \frac{a}{2T^*}n^2].
+	\end{equation}
+	
+	Explicit expressions for a few first $i$-s are as follows
+	\begin{equation}
+		K_0(T^*,\mu^*;y) = \sum_{n=0}^{\infty} \frac{(v^* T^{*3/2})^n}{n!} \exp[\left(y+\frac{\mu^*}{T^*}\right)n - \frac{a}{2T^*}n^2];
+	\end{equation}
+	\begin{equation}
+		K_1(T^*,\mu^*;y) = \sum_{n=0}^{\infty} \frac{n(v^* T^{*3/2})^n}{n!} \exp[\left(y+\frac{\mu^*}{T^*}\right)n - \frac{a}{2T^*}n^2];
+	\end{equation}
+	\begin{equation}
+		K_2(T^*,\mu^*;y) = \sum_{n=0}^{\infty} \frac{n^2 (v^* T^{*3/2})^n}{n!} \exp[\left(y+\frac{\mu^*}{T^*}\right)n - \frac{a}{2T^*}n^2];
+	\end{equation}
+	\begin{equation}
+		K_3(T^*,\mu^*;y) = \sum_{n=0}^{\infty} \frac{n^3 (v^* T^{*3/2})^n}{n!} \exp[\left(y+\frac{\mu^*}{T^*}\right)n - \frac{a}{2T^*}n^2].
+	\end{equation}
+	
+	\textbf{Partial derivatives with respect to $y$.} 
+	\begin{equation}
+		\frac{\partial K_n(T^*,\mu^*;y)}{\partial y}\bigg|_{(T^*,\mu^*)} = K_{n+1}(T^*,\mu^*;y),
+	\end{equation}
+	and thus
+	\begin{eqnarray}
+		K_n(T^*,\mu^*;y) & = & \frac{\partial K_{n-1}(T^*,\mu^*;y)}{\partial y} \bigg|_{(T^*,\mu^*)}
+		\nonumber\\
+		& = & \frac{\partial^n K_{0}(T^*,\mu^*;y)}{\partial y^n} \bigg|_{(T^*,\mu^*)}.
+	\end{eqnarray}
+	
+	\textbf{Partial derivatives with respect to $\mu^*$.}
+	\begin{equation}
+		\frac{\partial K_n(T^*,\mu^*;y)}{\partial \mu^*} \bigg|_{(T^*,y)} = \frac{1}{T^*} K_{n+1}(T^*,\mu^*;y).
+	\end{equation}
+	
+	\textbf{Partial derivatives with respect to $T^*$.}
+	\begin{equation}
+		\frac{\partial K_n(T^*,\mu^*;y)}{\partial T^*} \bigg|_{(\mu^*,y)} = \frac{1}{T^*} \left(\frac{3}{2} - \frac{\mu^*}{T^*}\right) K_{n+1}(T^*,\mu^*;y).
+	\end{equation}
+	
+	If we do not consider $y$ as an independent variable, but rather as a function of other two variables - $T^*$ and $\mu^*$, we rewrite the derivatives as follows.
+	
+	Partial derivatives with respect to $\mu^*$ become
+	\begin{equation}
+		\frac{\partial K_n(T^*,\mu^*;y)}{\partial \mu^*} \bigg|_{T^*} = \left(\frac{1}{T^*} + \frac{\partial y}{\partial \mu^*}\bigg|_{T^*} \right)K_{n+1}(T^*,\mu^*;y).
+	\end{equation}
+	
+	Partial derivatives with respect to $T^*$ become
+		\begin{equation}
+		\frac{\partial K_n(T^*,\mu^*;y)}{\partial T^*} \bigg|_{\mu^*} = \frac{1}{T^*} \left(\frac{3}{2} - \frac{\mu^*}{T^*} + T^* \frac{\partial y}{\partial T^*}\bigg|_{\mu^*}\right) K_{n+1}(T^*,\mu^*;y).
+	\end{equation}
 	
 	\section{Entropy: qualitative behavior}
 	To understand how entropy should behave qualitatively, we will study two simple cases in this appendix, namely, the van der Waals fluid and the ideal gas.
